syntax = "proto3";

package im.app;

message wsMsg {
    int32 cmd = 1;
    int32 Retry = 2;
    int32 seqNum = 3;
    bytes content = 4;
}